@@ -12,8 +12,9 @@ lbdb (0.48) UNRELEASED; urgency=medium
     - Declare Rules-Requires-Root: no.
   * Upgrade debhelper to v12.
   * m_inmail: Use INMAIL_DB if set in config (Closes: #916282).
+  * Add salsa CI pipeline in debian/gitlab-ci.yml.
 
- -- Roland Rosenfeld <roland@debian.org>  Fri, 04 Jan 2019 15:15:28 +0100
+ -- Roland Rosenfeld <roland@debian.org>  Fri, 04 Jan 2019 15:28:39 +0100
 
 lbdb (0.47) unstable; urgency=medium
 
